# alumicraft

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
alumicraft/: hooks.py  modules.txt  patches.txt  permissions.py
alumicraft/alumicraft/: __init__.py
alumicraft/alumicraft/doctype/: __init__.py
alumicraft/api/: boot.py
alumicraft/config/: desktop.py
alumicraft/patches/: __init__.py  cleanup_kiosk_verification_timesheets.py
alumicraft/public/js/: kiosk_timesheet.js  sidebar_fix.js  timesheet_kiosk.js
tests/: test_kiosk_permissions.py
tests/js/: kiosk_timesheet.test.js  timesheet_kiosk.test.js
