[project]
name = "alumicraft"
authors = [
    { name = "Alumicraft", email = "dev@alumicraft.local" },
]
description = "Alumicraft custom Frappe app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
