[project]
name = "alumicraft"
version = "0.0.1"
description = "Alumicraft custom Frappe app"
authors = [
    {name = "Alumicraft", email = "dev@alumicraft.local"}
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.html", "*.css", "*.js"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
