[project]
name = "alumicraft"
version = "0.0.1"
description = "Alumicraft custom Frappe app"
authors = [
    {name = "Alumicraft", email = "dev@alumicraft.local"}
]
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.html", "*.css", "*.js"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
